Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-28314

The Galera cluster primary node goes into hang mode when innodb_encryption_threads is enabled

Details

    Description

      Test case

      10.9.0 abe971219456b1f41923c06ff715fd4efeb02850 (Optimized)

      /test/mtest/mariadb-10.9.0-linux-x86_64/scripts/mariadb-install-db --no-defaults --force --auth-root-authentication-method=normal  --basedir=/test/mtest/mariadb-10.9.0-linux-x86_64 --datadir=/test/mtest/mariadb-10.9.0-linux-x86_64/node1  > /test/mtest/mariadb-10.9.0-linux-x86_64/logs/startup_node1.err 2>&1
       
       
      /test/mtest/mariadb-10.9.0-linux-x86_64/scripts/mariadb-install-db --no-defaults --force --auth-root-authentication-method=normal  --basedir=/test/mtest/mariadb-10.9.0-linux-x86_64 --datadir=/test/mtest/mariadb-10.9.0-linux-x86_64/node2  > /test/mtest/mariadb-10.9.0-linux-x86_64/logs/startup_node2.err 2>&1
       
      /test/mtest/mariadb-10.9.0-linux-x86_64/bin/mysqld --defaults-file=/test/mtest/mariadb-10.9.0-linux-x86_64/n1.cnf --plugin-load-add=file_key_management.so --loose-file-key-management --loose-file-key-management-filename=/home/ramesh/mariadb-qa/galera-sst-qa/conf/keys.txt --file-key-management-encryption-algorithm=aes_cbc  --wsrep-new-cluster > /test/mtest/mariadb-10.9.0-linux-x86_64/logs/node1.err 2>&1 &
       
      sleep 2
       
      /test/mtest/mariadb-10.9.0-linux-x86_64/bin/mysql -uroot -S/test/mtest/mariadb-10.9.0-linux-x86_64/node1/node1_socket.sock -e 'create database if not exists test' > /dev/null 2>&1
       
      sysbench /usr/share/sysbench/oltp_insert.lua --table-size=1000 --tables=10 --threads=10 --mysql-db=test --mysql-user=root --db-driver=mysql --mysql-socket=/test/mtest/mariadb-10.9.0-linux-x86_64/node1/node1_socket.sock prepare > /test/mtest/mariadb-10.9.0-linux-x86_64/logs/sysbench_load.log 2>&1
       
      /test/mtest/mariadb-10.9.0-linux-x86_64/bin/mysqld --defaults-file=/test/mtest/mariadb-10.9.0-linux-x86_64/n2.cnf --plugin-load-add=file_key_management.so --loose-file-key-management --loose-file-key-management-filename=/home/ramesh/mariadb-qa/galera-sst-qa/conf/keys.txt --file-key-management-encryption-algorithm=aes_cbc  > /test/mtest/mariadb-10.9.0-linux-x86_64/logs/node2.err 2>&1 &
       
      sleep 5
       
      /test/mtest/mariadb-10.9.0-linux-x86_64/bin/mysql -uroot -S/test/mtest/mariadb-10.9.0-linux-x86_64/node1/node1_socket.sock -e"FLUSH LOGS" ; # "FLUSH LOGS" goes to hang state
      

      Attached gdb stack gdb_stack.log from primary node

      Attachments

        1. gdb_stack.log
          30 kB
        2. n1.cnf
          1 kB
        3. n2.cnf
          1 kB

        Activity

          • 10.4 version (test result set) : bb-10.4-MDEV-28314
          jplindst Jan Lindström (Inactive) added a comment - 10.4 version (test result set) : bb-10.4- MDEV-28314

          People

            jplindst Jan Lindström (Inactive)
            ramesh Ramesh Sivaraman
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Git Integration

                Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.